--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -776,6 +776,7 @@
     <Content Include="Views\Plan\PlanData.cshtml" />
     <Content Include="Views\List\ExpertData.cshtml" />
     <Content Include="Views\List\Gratuity.cshtml" />
+    <Content Include="Views\List\Profit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
