--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -30,7 +30,7 @@
     <!--<add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=sa;Password=sql1994;" />-->
     <!--<add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=c8sa;Password=c8sa20180402;" />-->
 
-    <!--<add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=luohongshun;" />-->
+    <add name="connStr" connectionString="Data Source=.\SQL2008;Initial Catalog=C8_1;User ID=sa;Password=123456;" />
 
 
   </connectionStrings>
