--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Play.cs" />
     <Compile Include="RankingList.cs" />
     <Compile Include="Talk\BlackListView.cs" />
+    <Compile Include="Talk\ChatRoom.cs" />
     <Compile Include="Talk\ProcessingRecords.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceMapping.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="SiteSetting.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="UserInternalMessage.cs" />
+    <Compile Include="UserState.cs" />
     <Compile Include="UserTask.cs" />
   </ItemGroup>
   <ItemGroup>
