--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -711,6 +711,7 @@
     <Content Include="css\fonts\c8.ttf" />
     <Content Include="css\fonts\c8.woff" />
     <Content Include="App_Data\log4net.config" />
+    <None Include="Properties\PublishProfiles\1.pubxml" />
     <None Include="Properties\PublishProfiles\C8 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\C8 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
