添加提现功能

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -21,7 +21,8 @@
     <!--腾讯云万彩吧短信 地址配置-->
     <add key="sdkappid" value="1400040575" />
     <add key="appkey" value="eb5005910142d1edbb20baddd0e8ca08" />
-    
+    <!--最小提款金额-->
+    <add key="minExtractCash" value="1"/>
 
   </appSettings>
 
