--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessRecord.cs" />
+    <Compile Include="BankInfo.cs" />
     <Compile Include="BettingRecord.cs" />
     <Compile Include="ComeOutRecord.cs" />
     <Compile Include="CommissionSetting.cs" />
