高手榜搜索+bug修复

--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Enum\ResourceTypeEnum.cs" />
     <Compile Include="Enum\TransactionTypeEnum.cs" />
     <Compile Include="Enum\UserInternalMessageTypeEnum.cs" />
+    <Compile Include="ExpertHotSearch.cs" />
     <Compile Include="Follow.cs" />
     <Compile Include="FriendLink.cs" />
     <Compile Include="IntegralRule.cs" />
