--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Models\RankMoneyListModel.cs" />
     <Compile Include="Models\SystemMessage.cs" />
     <Compile Include="Models\TaskModel.cs" />
+    <Compile Include="Models\VoucherModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +185,7 @@
     <Content Include="css\paper.css" />
     <Content Include="css\head.css" />
     <Content Include="css\style.css" />
+    <Content Include="css\style1.css" />
     <Content Include="css\副本 style.css" />
     <Content Include="Global.asax" />
     <Content Include="images\01.png" />
@@ -688,6 +690,13 @@
     <Content Include="images\Banklogo\PSBC.png" />
     <Content Include="images\Banklogo\SPABANK.png" />
     <Content Include="images\Banklogo\SPDB.png" />
+    <Content Include="images\w1.png" />
+    <Content Include="images\w2_1.png" />
+    <Content Include="images\w2_2.png" />
+    <Content Include="images\w3_1.png" />
+    <Content Include="images\w3_2.png" />
+    <Content Include="images\w4_1.png" />
+    <Content Include="images\w4_2.png" />
     <Content Include="js\bet.js" />
     <Content Include="js\dialog.min.js" />
     <Content Include="js\fontSize.js" />
@@ -819,6 +828,8 @@
     <Content Include="Views\Amount\ExtractCash.cshtml" />
     <Content Include="Views\Amount\ExtractCashSuccess.cshtml" />
     <Content Include="Views\Plan\ExpertSearch.cshtml" />
+    <Content Include="Views\Personal\Voucher.cshtml" />
+    <Content Include="Views\Personal\VoucherRules.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="js\kcp\src\" />
