六合彩实时开奖

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -23,7 +23,8 @@
     <add key="appkey" value="eb5005910142d1edbb20baddd0e8ca08" />
     <!--最小提款金额-->
     <add key="minExtractCash" value="1" />
-
+    <!--WebSocket服务器地址加端口  ws://119.147.139.131:8801/-->
+    <add key="WebSocketUrl" value="ws://119.147.139.131:8801/" />
   </appSettings>
 
 
