新增获取PV UV  IP 功能

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -16,7 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="vs:EnableBrowserLink" value="false" />
     <!--Memcached 地址配置-->
-    <add key="MemcachedServerList" value="127.0.0.1:11111" />
+    <add key="MemcachedServerList" value="127.0.0.1:11211" />
 
     <!--腾讯云万彩吧短信 地址配置-->
     <add key="sdkappid" value="1400040575" />
@@ -25,6 +25,9 @@
     <add key="minExtractCash" value="1" />
     <!--WebSocket服务器地址加端口  ws://119.147.139.131:8801/-->
     <add key="WebSocketUrl" value="ws://119.147.139.131:8801/" />
+  
+    <!--接口服务器地址加端口  http://119.147.139.131:8088/api/-->
+    <add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />
   </appSettings>
 
 
