--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Controllers\OutController.cs" />
     <Compile Include="Controllers\PersonalController.cs" />
     <Compile Include="Controllers\PlanController.cs" />
+    <Compile Include="Controllers\PvUvIpController.cs" />
     <Compile Include="Controllers\RechargeController.cs" />
     <Compile Include="Controllers\RecordController.cs" />
     <Compile Include="Controllers\TalkingController.cs" />
@@ -845,6 +846,7 @@
     <Content Include="Views\Plan\ExpertSearch.cshtml" />
     <Content Include="Views\Personal\Voucher.cshtml" />
     <Content Include="Views\Personal\VoucherRules.cshtml" />
+    <Content Include="Views\PvUvIp\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="js\kcp\src\" />
