--- a/C8.Lottery.Public/C8.Lottery.Public.csproj
+++ b/C8.Lottery.Public/C8.Lottery.Public.csproj
@@ -58,6 +58,8 @@
     <Compile Include="CacheHelper.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="HttpCommon.cs" />
+    <Compile Include="JsonExtension.cs" />
+    <Compile Include="JsonSerializerManager.cs" />
     <Compile Include="LogerFactory.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="LuoUtil.cs" />
