--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -51,7 +51,10 @@
   </runtime>
 
   <system.web>
-   
+    <customErrors mode="On" defaultRedirect="/Home/Index">
+      <error statusCode="404" redirect="/Home/Index"/>
+    </customErrors>
+    
     <httpRuntime targetFramework="4.5" />
 
     <compilation debug="true" targetFramework="4.5" />
