--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -18,7 +18,7 @@
     <add key="vs:EnableBrowserLink" value="false" />
 
     <!--缓存类型 localcache\memcached\redis-->
-    <add key="CacheProvider" value="memcached" />
+    <add key="CacheProvider" value="redis" />
     <!--缓存默认过期时间(分钟)-->
     <add key="CacheTimeOut" value="30" />
     <!--Memcached 地址配置-->
