--- a/C8.Lottery.Public/C8.Lottery.Public.csproj
+++ b/C8.Lottery.Public/C8.Lottery.Public.csproj
@@ -85,6 +85,7 @@
     <Compile Include="JsonSerializerManager.cs" />
     <Compile Include="LogerFactory.cs" />
     <Compile Include="LogHelper.cs" />
+    <Compile Include="LotteryTime.cs" />
     <Compile Include="LuoUtil.cs" />
     <Compile Include="PagedListT.cs" />
     <Compile Include="Pagination.cs" />
