--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -771,6 +771,7 @@
     <Content Include="css\fonts\c8.woff" />
     <Content Include="App_Data\log4net.config" />
     <Content Include="js\luo\plan.myplan.js" />
+    <Content Include="XML\LotteryTime.xml" />
     <None Include="Properties\PublishProfiles\1.pubxml" />
     <None Include="Properties\PublishProfiles\C8 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\C8 - Web Deploy.pubxml" />
