修改开奖时间和封盘

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -8,7 +8,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!--<section name="RedisConfig" type="System.Configuration.IConfigurationSectionHandler, System.Configuration" />-->
   </configSections>
-  
+
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -18,19 +18,19 @@
     <add key="vs:EnableBrowserLink" value="false" />
 
     <!--缓存类型 localcache\memcached\redis-->
-    <add key="CacheProvider" value="redis" />
+    <add key="CacheProvider" value="memcached" />
     <!--缓存默认过期时间(分钟)-->
     <add key="CacheTimeOut" value="30" />
     <!--Memcached 地址配置-->
     <add key="MemcachedServerList" value="127.0.0.1:11211" />
     <!--Redis 地址配置-->
-    <add key="WriteServerConStr" value="qxdev888@120.79.202.109:6379" /> 
-    <add key="ReadServerConStr" value="qxdev888@120.79.202.109:6379" /> 
-    <add key="MaxWritePoolSize" value="60" /> 
-    <add key="MaxReadPoolSize" value="60" /> 
-    <add key="AutoStart" value="true" /> 
+    <add key="WriteServerConStr" value="qxdev888@120.79.202.109:6379" />
+    <add key="ReadServerConStr" value="qxdev888@120.79.202.109:6379" />
+    <add key="MaxWritePoolSize" value="60" />
+    <add key="MaxReadPoolSize" value="60" />
+    <add key="AutoStart" value="true" />
     <add key="LocalCacheTime" value="180" />
-    <add key="RecordeLog" value="false" /> 
+    <add key="RecordeLog" value="false" />
 
     <!--腾讯云万彩吧短信 地址配置-->
     <add key="sdkappid" value="1400040575" />
@@ -39,25 +39,25 @@
     <add key="minExtractCash" value="1" />
     <!--WebSocket服务器地址加端口  ws://119.147.139.131:8801/-->
     <add key="WebSocketUrl" value="ws://119.147.139.131:8801/" />
-  
+
     <!--接口服务器地址加端口  http://119.147.139.131:8088/api/-->
     <add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />
- 
+
     <add key="debug" value="1"/>
     <add key="WebDomain" value="c8.cn"/>
   </appSettings>
 
 
   <connectionStrings>
-   
 
-    <add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=123456;" />
+    <add name="connStr" connectionString="Data Source=119.147.139.131,3433;Initial Catalog=C8;User ID=c8sa;Password=c8sa20180402;" />
+    <!--<add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=123456;" />-->
 
   </connectionStrings>
 
   <log4net configSource="App_Data\log4net.config" />
-  <!--<RedisConfig WriteServerList="120.79.202.109:6379" ReadServerList="120.79.202.109:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false" />--> 
-  
+  <!--<RedisConfig WriteServerList="120.79.202.109:6379" ReadServerList="120.79.202.109:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false" />-->
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -71,7 +71,7 @@
     <customErrors mode="Off" defaultRedirect="/Home/Index">
       <error statusCode="404" redirect="/Home/Index"/>
     </customErrors>
-    
+
     <httpRuntime targetFramework="4.5" />
 
     <compilation debug="true" targetFramework="4.5" />
