--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -710,6 +710,9 @@
     <Content Include="images\w1.png" />
     <Content Include="images\w10_1.png" />
     <Content Include="images\w10_2.png" />
+    <Content Include="images\w14_1.png" />
+    <Content Include="images\w14_2.png" />
+    <Content Include="images\w14_3.png" />
     <Content Include="images\w2_1.png" />
     <Content Include="images\w2_2.png" />
     <Content Include="images\w3_1.png" />
@@ -777,6 +780,7 @@
     <Content Include="Mdate\Mdate.js" />
     <Content Include="Mdate\needcss\Mdate.css" />
     <Content Include="XML\LotteryTime.xml" />
+    <Content Include="下载页面.html" />
     <None Include="Properties\PublishProfiles\1.pubxml" />
     <None Include="Properties\PublishProfiles\C8 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\C8 - Web Deploy.pubxml" />
