--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -874,6 +874,7 @@
     <Content Include="Views\Home\down.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="hk6\" />
     <Folder Include="js\kcp\src\" />
   </ItemGroup>
   <ItemGroup>
