--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -756,6 +756,8 @@
     <Content Include="js\luo\plan.js" />
     <Content Include="js\luo\play.js" />
     <Content Include="js\opendate.js" />
+    <Content Include="js\ossjs\BindingBankCard.js" />
+    <Content Include="js\ossjs\ExtractCash.js" />
     <Content Include="js\plan_scroll1.js" />
     <Content Include="js\public.js" />
     <Content Include="js\runTime2.js" />
@@ -923,12 +925,11 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>36199</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost:36166/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
