--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -22,7 +22,7 @@
     <!--缓存默认过期时间(分钟)-->
     <add key="CacheTimeOut" value="30" />
     <!--Memcached 地址配置-->
-    <add key="MemcachedServerList" value="127.0.0.1:11211" />
+    <add key="MemcachedServerList" value="127.0.0.1:11111" />
     <!--Redis 地址配置-->
     <add key="WriteServerConStr" value="qxdev888@120.79.202.109:6379" />
     <add key="ReadServerConStr" value="qxdev888@120.79.202.109:6379" />
@@ -45,6 +45,8 @@
 
     <add key="debug" value="1"/>
     <add key="WebDomain" value="c8.cn"/>
+    <!--js cdn配置地址-->
+    <add key="osshost" value=""/>
   </appSettings>
 
 
