6彩页面优化

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -22,6 +22,7 @@
     <!--缓存默认过期时间(分钟)-->
     <add key="CacheTimeOut" value="30" />
     <!--Memcached 地址配置-->
+    <!--<add key="MemcachedServerList" value="119.147.139.36:12121" />-->
     <add key="MemcachedServerList" value="127.0.0.1:11211" />
     <!--Redis 地址配置-->
     <add key="WriteServerConStr" value="qxdev888@120.79.202.109:6379" />
