--- a/C8.Lottery.Public/C8.Lottery.Public.csproj
+++ b/C8.Lottery.Public/C8.Lottery.Public.csproj
@@ -31,13 +31,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>..\..\..\备份\c8\C8\C8.Lottery.Public\bin\ICSharpCode.SharpZipLib.dll</HintPath>
+      <HintPath>..\C8.Lottery.Portal\Lib\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>..\..\..\备份\c8\C8\C8.Lottery.Public\bin\log4net.dll</HintPath>
+      <HintPath>..\C8.Lottery.Portal\Lib\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Memcached.ClientLibrary">
-      <HintPath>..\..\..\备份\c8\C8\C8.Lottery.Public\bin\Memcached.ClientLibrary.dll</HintPath>
+      <HintPath>..\C8.Lottery.Portal\Lib\Memcached.ClientLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\C8.Lottery.Portal\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
