--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -47,6 +47,8 @@
     <add key="WebDomain" value="c8.cn"/>
     <!--js cdn配置地址-->
     <add key="osshost" value=""/>
+
+    <add key="FriendshipLinks" value="false"/>    
   </appSettings>
 
 
