--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -18,7 +18,7 @@
     <add key="vs:EnableBrowserLink" value="false" />
 
     <!--缓存类型 localcache\memcached\redis-->
-    <add key="CacheProvider" value="memcached" />
+    <add key="CacheProvider" value="redis" />
     <!--缓存默认过期时间(分钟)-->
     <add key="CacheTimeOut" value="30" />
     <!--Memcached 地址配置-->
@@ -43,9 +43,9 @@
     <!--接口服务器地址加端口  http://119.147.139.131:8088/api/-->
     <add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />
 
-    <add key="debug" value="1"/>
-    <add key="WebDomain" value="c8.cn"/>
-    <add key="FriendshipLinks" value="false"/>
+    <add key="debug" value="1" />
+    <add key="WebDomain" value="c8.cn" />
+    <add key="FriendshipLinks" value="false" />
   </appSettings>
 
 
@@ -65,12 +65,16 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 
   <system.web>
     <customErrors mode="Off" defaultRedirect="/Home/Index">
-      <error statusCode="404" redirect="/Home/Index"/>
+      <error statusCode="404" redirect="/Home/Index" />
     </customErrors>
 
     <httpRuntime targetFramework="4.5" />
