--- a/C8.Lottery.Public/packages.config
+++ b/C8.Lottery.Public/packages.config
@@ -1,7 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ServiceStack.Common" version="5.1.0" targetFramework="net45" />
-  <package id="ServiceStack.Interfaces" version="5.1.0" targetFramework="net45" />
-  <package id="ServiceStack.Redis" version="5.1.0" targetFramework="net45" />
-  <package id="ServiceStack.Text" version="5.1.0" targetFramework="net45" />
+  <package id="QX.Common" version="1.0.2" targetFramework="net45" />
 </packages>
