--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -46,7 +46,7 @@
     <add key="debug" value="1"/>
     <add key="WebDomain" value="c8.cn"/>
     <!--js cdn配置地址-->
-    <add key="osshost" value="http://oss.c8.cn/c8/res"/>
+    <add key="osshost" value=""/>
 
     <add key="FriendshipLinks" value="false"/>    
   </appSettings>
