--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -41,8 +41,8 @@
     <add key="WebSocketUrl" value="ws://119.147.139.131:8801/" />
 
     <!--接口服务器地址加端口  http://119.147.139.131:8088/api/-->
-    <!--<add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />-->
-    <add key="InterfaceUrl" value="http://api2.c8.cn/api/" />
+    <add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />
+
  
 
     <add key="debug" value="1"/>
