--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -48,7 +48,7 @@
     <add key="debug" value="1"/>
     <add key="WebDomain" value="c8.cn"/>
     <!--js cdn配置地址 http://oss.c8.cn/c8/res-->
-    <add key="osshost" value=""/>
+    <add key="osshost" value="http://oss.c8.cn/c8/res"/>
 
     <add key="FriendshipLinks" value="false"/>    
   </appSettings>
