--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -51,7 +51,10 @@
     <!--js cdn配置地址 http://oss.c8.cn/c8/res-->
     <add key="osshost" value=""/>
 
-    <add key="FriendshipLinks" value="false"/>    
+    <add key="FriendshipLinks" value="false"/>
+    <!--针对分享 是否https访问-->
+    <add key="ishttps" value="http"/>
+    
   </appSettings>
 
 
