--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -151,6 +151,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\HomeApiController.cs" />
     <Compile Include="App_Code\UserHelper.cs" />
     <Compile Include="Business\BusinessData\LotteryNewsChannel.cs" />
     <Compile Include="Business\BusinessData\LotteryType.cs" />
