--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -44,8 +44,8 @@
     <!--WebSocket服务器地址加端口  ws://119.147.139.131:8801/-->
     <add key="WebSocketUrl" value="ws://119.147.139.131:8801/" />
 
-    <!--接口服务器地址加端口  http://119.147.139.131:8088/api/-->
-    <add key="InterfaceUrl" value="http://api2.c8.cn/api/" />
+    <!--接口服务器地址加端口http://api2.c8.cn/api/  -->
+    <add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />
     <add key="debug" value="1"/>
     <add key="WebDomain" value="c8.cn"/>
     <!--js cdn配置地址 http://oss.c8.cn/c8/res-->
