--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Talk\TalkNotes.cs" />
     <Compile Include="SiteSetting.cs" />
     <Compile Include="ToJson\LotteryRecordToJson.cs" />
+    <Compile Include="ToJson\LotteryRecrdToLhc.cs" />
     <Compile Include="UserCoupon.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="UserInternalMessage.cs" />
