--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -737,6 +737,7 @@
     <Content Include="images\w15_6.png" />
     <Content Include="images\w15_7.png" />
     <Content Include="images\w15_8.png" />
+    <Content Include="images\w16.png" />
     <Content Include="images\w2_1.png" />
     <Content Include="images\w2_2.png" />
     <Content Include="images\w3_1.png" />
