--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -18,11 +18,11 @@
     <add key="vs:EnableBrowserLink" value="false" />
 
     <!--缓存类型 localcache\memcached\redis-->
-    <add key="CacheProvider" value="redis" />
+    <add key="CacheProvider" value="memcached" />
     <!--缓存默认过期时间(分钟)-->
     <add key="CacheTimeOut" value="30" />
     <!--Memcached 地址配置-->
-    <add key="MemcachedServerList" value="127.0.0.1:11211" />
+    <add key="MemcachedServerList" value="119.147.139.131:11211" />
     <!--Redis 地址配置-->
     <add key="WriteServerConStr" value="qxdev888@120.79.202.109:6379" />
     <add key="ReadServerConStr" value="qxdev888@120.79.202.109:6379" />
@@ -51,7 +51,7 @@
     <!--js cdn配置地址 http://oss.c8.cn/c8/res-->
     <add key="osshost" value=""/>
 
-    <add key="FriendshipLinks" value="false"/>
+    <add key="FriendshipLinks" value="true"/>
     <!--针对分享 是否https访问-->
     <add key="ishttps" value="http"/>
     
