--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,5 @@ __pycache__/
 *.xsd.cs
 /C8.Lottery.Portal/C8.Lottery.Portal/Upload/TalkingImg
 /C8.Lottery.Portal/Logs
+/C8.Lottery.Portal/C8.Lottery.Portal/d.html
+/C8.Lottery.Portal/C8.Lottery.Portal/s.html
