--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -82,7 +82,7 @@
   </runtime>
 
   <system.web>
-    <customErrors mode="Off" defaultRedirect="/Home/Index">
+    <customErrors mode="On" defaultRedirect="/Home/Index">
       <error statusCode="404" redirect="/Home/Index"/>
     </customErrors>
 
