--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -222,7 +222,9 @@
     <Content Include="css\style.css" />
     <Content Include="css\style1.css" />
     <Content Include="css\副本 style.css" />
+    <Content Include="fc3d\column-23.html" />
     <Content Include="Global.asax" />
+    <Content Include="hk6\202.html" />
     <Content Include="images\01.png" />
     <Content Include="images\02.png" />
     <Content Include="images\03.png" />
@@ -952,7 +954,6 @@
     <Content Include="Views\Shared\Sidebar.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="hk6\" />
     <Folder Include="js\kcp\src\" />
   </ItemGroup>
   <ItemGroup>
