--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -46,8 +46,8 @@
 
     <!--接口服务器地址加端口http://api2.c8.cn/api/  -->
     <add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />
-    <add key="debug" value="1" />
-    <add key="WebDomain" value="c8.cn" />
+    <add key="debug" value="0" />
+    <add key="WebDomain" value="192.168.1.133" />
     <!--js cdn配置地址 http://oss.c8.cn/c8/res-->
     <add key="osshost" value="" />
 
