--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -933,7 +933,7 @@
     <Content Include="Views\List\Index.cshtml" />
     <Content Include="Views\List\New.cshtml" />
     <Content Include="Views\List\Expert.cshtml" />
-    <Content Include="Views\Plan\PlanData.cshtml" />
+    <Content Include="Views\Plan\PlanData2.cshtml" />
     <Content Include="Views\List\ExpertData.cshtml" />
     <Content Include="Views\List\Gratuity.cshtml" />
     <Content Include="Views\List\Profit.cshtml" />
@@ -951,6 +951,7 @@
     <Content Include="Views\Home\Explain.cshtml" />
     <Content Include="Views\News\NewIndex.cshtml" />
     <Content Include="Views\Shared\Sidebar.cshtml" />
+    <Content Include="Views\Plan\PlanData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="js\kcp\src\" />
