--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -60,7 +60,7 @@
 
   <connectionStrings>
 
-    <add name="connStr" connectionString="Data Source=119.147.139.131,3433;Initial Catalog=C8;User ID=c8sa;Password=c8sa20180402;" />
+    <add name="connStr" connectionString="Data Source=103.21.117.35,4344;Initial Catalog=C8;User ID=c8sa;Password=q83Abc^c2vrse$TV;" />
     <!--<add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=123456;" />-->
 
   </connectionStrings>
@@ -82,7 +82,7 @@
   </runtime>
 
   <system.web>
-    <customErrors defaultRedirect="/Home/Index" mode="On">
+    <customErrors defaultRedirect="/Home/Index" mode="Off">
       <error statusCode="404" redirect="/Home/Index" />
             <error redirect="/home/index" statusCode="403" />
     </customErrors>
