--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -40,12 +40,16 @@
 
     <!--金币现金转换比例,如1元等于10金币-->
     <add key="MoneyToCoin" value="10" />
-    
+
     <!--WebSocket服务器地址加端口  ws://119.147.139.131:8801/-->
     <add key="WebSocketUrl" value="ws://119.147.139.131:8801/" />
 
     <!--接口服务器地址加端口http://api2.c8.cn/api/  -->
     <add key="InterfaceUrl" value="http://119.147.139.131:8088/api/" />
+
+    <!-- 站点地址 -->
+    <add key="WebUrl" value="https://www.c8.cn" />
+
     <add key="debug" value="1" />
     <add key="WebDomain" value="c8.cn" />
     <!--js cdn配置地址 http://oss.c8.cn/c8/res-->
@@ -54,13 +58,14 @@
     <add key="FriendshipLinks" value="true" />
     <!--针对分享 是否https访问-->
     <add key="ishttps" value="http" />
-    
+
   </appSettings>
 
 
   <connectionStrings>
 
     <add name="connStr" connectionString="Data Source=119.147.139.131,3433;Initial Catalog=C8;User ID=c8sa;Password=c8sa20180402;" />
+    <!--<add name="connStr" connectionString="Data Source=103.21.117.35,4344;Initial Catalog=C8;User ID=c8sa;Password=q83Abc^c2vrse$TV;" />-->
     <!--<add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=123456;" />-->
 
   </connectionStrings>
@@ -84,7 +89,7 @@
   <system.web>
     <customErrors defaultRedirect="/Home/Index" mode="On">
       <error statusCode="404" redirect="/Home/Index" />
-            <error redirect="/home/index" statusCode="403" />
+      <error redirect="/home/index" statusCode="403" />
     </customErrors>
 
     <httpRuntime targetFramework="4.5" />
@@ -111,6 +116,6 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-        <httpRedirect enabled="false" destination="" />
+    <httpRedirect enabled="false" destination="" />
   </system.webServer>
 </configuration>
